
Version 0.179.054:
	Made changes to mixer
	Added armed switch to wiz rc
	Changed how pid controller handles Ki
	Changed RX wizard to uncalibrate radio
		Make sure you run wiz rc after wiz rx

Version 0.180.055:
	Added betafloght rates
	Removed wc

Version 0.181.056:
	Changed config slightly

Version 0.182.057:
	Changed tpa curve
	added "set stick_curve" It replaces "set pitch_curve, set roll_curve, set yaw_curve"
	Reticulated splines

Version 0.183.057:
	Added famf setting. "set famf=1.0" Range is 0.90 to 1.10

Version 0.184.057:
	Changed wizard wording

Version 0.185.057:
	Rescaled ADC voltage

Version 0.186.057:
	GUI changes

Version 0.187.057:
	GUI changes

Version 0.188.057:
	Change S.port battery ID and scaled voltage slightly.
	Put s.port on USART 3 RX pin and run "set telem_sport=14" to enable S.port.
	Rescaled voltage for spektrum telelmtry. "set telem_spek=1" to enable spektrum telemtry on same TX pin the telemtry capable spektrum RX is located.
	Added plus and reverse yaw plus mixer. set mixer_type=8 for normal yaw plus, set mixer_type=9 for reverse yaw plus mixer
	Made changed to auto level mode.

Version 0.189.057:
	Change how failsafe works on sbus

Version 0.190.057:
	WS2812 LEDs will no longer power up when connected to USB
	Minor 1wire changes
	Added low voltage buzzer
	Beta versions Increment
	
Version 0.191.057:
	Fix RX detection method
	Updated motor calibration routine

Version 0.192.057:
	Fixed kiss rates
	Changed DSMX 22ms detection
	Added logging continuation after disarm / failsafe for 25 itterations with trouble codes
	Added serial number command
	
Version 0.193.057:
	Wizard changes

Version 0.194.057:
	Self level mode updates
	Make force flashing ESCs slightly safer
	nytfluffyrates command added
	braindrainrates command added








Features in current development:
	MSP compatibility
	MAVlink compatibility
	Current input

Features for future development:
	transponder output
	Sonar input
	GPS input
	Unobtanium detector